--- a/main.html
+++ b/main.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grocery List Total Price</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <!-- the entire body must be written by student -->
     <table style="width: 100%">
-        <caption>Monthly savings</caption>
+        <caption>Monthly Savings</caption>
         <tr>
             <th>Item</th>
             <th>Prices in Rs</th>
@@ -35,9 +34,7 @@
             <td class="price">50</td>
         </tr>
     </table>
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    
+    <script src="script.js"></script>
 </body>
-
 </html>
